<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
            android:id="@+id/rl_title_bar_common_repair"
            android:background="@color/title_bar_bg"
            android:clipToPadding="true"
            android:fitsSystemWindows="true"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">
        <ImageView
                android:id="@+id/iv_back_common_repair"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/back"
                android:layout_marginLeft="10dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>

        <TextView
                android:id="@+id/tv_title_common_repair"
                android:text="@string/common_repair"
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_height="wrap_content"/>
    </RelativeLayout>

    <ScrollView android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="90">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/gray_e"
                android:gravity="center_horizontal"
                android:focusable="true"
                android:focusableInTouchMode="true">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/common_repair_tip"
                    android:textSize="10sp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/please_choose_your_repair_project"
                    android:padding="10dp"
                    android:textColor="@color/black"/>
            <TextView
                    android:id="@+id/tv_choose_repair_project_common_repair"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/please_choose_your_repair_project_type"
                    android:background="@drawable/button_spinner_bg"
                    android:padding="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:drawableRight="@drawable/down"/>

            <TextView
                    android:id="@+id/tv_choose_repair_project_detail_common_repair"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/please_choose_your_repair_project_detail"
                    android:background="@drawable/button_spinner_bg"
                    android:padding="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:drawableRight="@drawable/down"
                    android:visibility="gone"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_description"
                    android:padding="10dp"
                    android:textColor="@color/black"/>
            <EditText
                    android:id="@+id/et_detail_description_common_repair"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_spinner_bg"
                    android:lines="5"
                    android:gravity="top"
                    android:padding="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:scrollbars="vertical"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/community_address"
                    android:padding="10dp"
                    android:textColor="@color/black"/>

            <TextView
                    android:id="@+id/tv_repair_address_common_repair"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/please_choose_address"
                    android:background="@drawable/button_spinner_bg"
                    android:padding="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:drawableRight="@drawable/down"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_address"
                    android:padding="10dp"
                    android:textColor="@color/black"/>
            <EditText
                    android:id="@+id/et_detail_address_common_repair"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_spinner_bg"
                    android:lines="3"
                    android:gravity="top"
                    android:padding="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:scrollbars="vertical"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_live_pic"
                    android:padding="10dp"
                    android:textColor="@color/black"/>
            <com.zhihuitech.qtwsq.util.MyGridView
                    android:id="@+id/gv_pics_common_repair"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:numColumns="4"
                    android:padding="10dp"
                    android:gravity="center"
                    android:horizontalSpacing="20dp"
                    android:verticalSpacing="20dp">
            </com.zhihuitech.qtwsq.util.MyGridView>
        <!--    <LinearLayout
                    android:id="@+id/ll_img_common_repair"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/add_car_pic"
                        android:background="@drawable/button_spinner_bg"
                        android:padding="10dp"/>
            </LinearLayout>-->
            <TextView
                    android:id="@+id/tv_submit_common_repair"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_bg03"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:clickable="true"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
