<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
            android:id="@+id/rl_title_bar_reset_password"
            android:background="@color/title_bar_bg"
            android:clipToPadding="true"
            android:fitsSystemWindows="true"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">
        <ImageView
                android:id="@+id/iv_back_reset_password"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/back"
                android:layout_marginLeft="10dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>

        <TextView
                android:id="@+id/tv_title_reset_password"
                android:text="@string/forget_password"
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_height="wrap_content"/>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="90"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="10dp">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/black"
                    android:text="@string/new_password"
                    android:textSize="16sp"/>

            <EditText
                    android:id="@+id/et_new_password_reset_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:inputType="textPassword"
                    android:hint="@string/password_tip"
                    android:maxLength="15"
                    android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="10dp">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/black"
                    android:text="@string/confirm_password"
                    android:textSize="16sp"/>

            <EditText
                    android:id="@+id/et_confirm_password_reset_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:inputType="textPassword"
                    android:hint="@string/input_password_again"
                    android:maxLength="15"
                    android:singleLine="true"/>
        </LinearLayout>

        <Button
                android:id="@+id/btn_submit_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:background="@drawable/button_bg03"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:padding="10dp"
                android:layout_margin="20dp"/>

    </LinearLayout>
</LinearLayout>