<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:background="@drawable/dialog_bg">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <LinearLayout
                android:id="@+id/ll_family_repair_dialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
            <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:src="@drawable/family_repair"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family_repair"
                    android:clickable="false"
                    android:textColor="@color/repair_text"
                    android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/ll_common_repair_dialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
            <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:src="@drawable/common_repair"
                    android:clickable="false"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common_repair"
                    android:clickable="false"
                    android:textColor="@color/repair_text"
                    android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
            android:id="@+id/tv_cannot_choose_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cannot_choose"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:layout_marginTop="20dp"/>
    <TextView
            android:id="@+id/tv_query_my_repair_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/query_my_repair_record"
            android:layout_marginBottom="20dp" android:textSize="18sp"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_9"/>
    <TextView
            android:id="@+id/tv_cancel_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:paddingTop="15dp"
            android:gravity="center"
            android:paddingBottom="15dp"/>

</LinearLayout>