<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/login_bg"
              android:gravity="center"
              android:padding="10dp">
    <ImageView
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/qt_symbol"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/dialog_bg"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp"
                android:gravity="center_vertical">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/username_login"/>
            <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray_9"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>
            <EditText
                    android:id="@+id/et_username_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:singleLine="true"
                    android:maxLength="20"
                    android:inputType="phone"
                    android:background="@null"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp"
                android:gravity="center_vertical">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/password_login"/>
            <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray_9"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>
            <EditText
                    android:id="@+id/et_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:background="@null"
                    android:singleLine="true"
                    android:maxLength="20"
                    android:inputType="textPassword"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">
        <CheckBox
                android:id="@+id/cb_auto_login_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/auto_login"
                android:textColor="@color/white"
                android:paddingLeft="5dp"
                android:button="@drawable/checkbox_bg_login"/>
        <TextView
                android:id="@+id/tv_forget_password_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:clickable="true"
                android:textColor="@color/forget_password_text_color"/>
    </RelativeLayout>

    <Button
            android:id="@+id/btn_login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/login_button_bg"
            android:textColor="@color/white"
            android:textSize="18sp"
            style="?android:attr/borderlessButtonStyle"/>
    <Button
            android:id="@+id/btn_register_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_bg03"
            android:textColor="@color/white"
            android:textSize="18sp"
            style="?android:attr/borderlessButtonStyle"/>
</LinearLayout>